--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "debug": "node --inspect-brk app.js"
+    "debug": "node --inspect-brk app.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.2.2",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.0.2",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5"
   }
